syntax = "proto3";

package order;

option go_package = "order-service/proto;orderpb";

service OrderService {
  rpc PlaceOrder(PlaceOrderRequest) returns (PlaceOrderResponse);
  rpc GetOrders(GetOrdersRequest) returns (GetOrdersResponse);
  rpc GetOrderDetails(GetOrderDetailsRequest) returns (GetOrderDetailsResponse);
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (UpdateOrderStatusResponse);
  rpc GenerateInvoice(GenerateInvoiceRequest) returns (GenerateInvoiceResponse);
  rpc ListAllOrders (ListAllOrdersRequest) returns (ListAllOrdersResponse);
  rpc CancelOrder(CancelOrderRequest) returns (CancelOrderResponse);

}

message PlaceOrderRequest {
  string user_id = 1;
  repeated CartItem items = 2;
}

message CartItem {
  string product_id = 1;
  int32 quantity = 2;
}

message PlaceOrderResponse {
  string order_id = 1;
  string status = 2;
}

message GetOrdersRequest {
  string user_id = 1;
}

message GetOrdersResponse {
  repeated Order orders = 1;
}

message GetOrderDetailsRequest {
  string order_id = 1;
}

message GetOrderDetailsResponse {
  Order order = 1;
}

message UpdateOrderStatusRequest {
  string order_id = 1;
  string status = 2;
}

message UpdateOrderStatusResponse {
  string status = 1;
}

message Order {
  string id = 1;
  string user_id = 2;
  string order_status = 3;
  string payment_status = 4;
  double total_amount = 5;
  string created_at = 6;
  repeated OrderItem items = 7; // ✅ New
}

message GenerateInvoiceRequest {
  string order_id = 1;
}

message GenerateInvoiceResponse {
  string invoice_text = 1;
}

message ListAllOrdersRequest {}

message ListAllOrdersResponse {
  repeated Order orders = 1;
}

message OrderItem {
  string product_id = 1;
  string product_name = 2; // populated via DB join or product lookup
  int32 quantity = 3;       // ✅ THIS should be the actual ordered quantity
  double price = 4;
  string size = 5;
  string color = 6;
}


message CancelOrderRequest {
  string order_id = 1;
}

message CancelOrderResponse {
  string status = 1;
}